--- a/src/app/Utes/utesconfiguracion/utesconfiguracion.component.html
+++ b/src/app/Utes/utesconfiguracion/utesconfiguracion.component.html
@@ -23,9 +23,9 @@
                     <thead class="thead-inverse">
                         <tr>
                             <th class="center" style="width: 30px;"></th>
-                            <th class="center" style="width: 100px;">Editar periodo</th>
-                            <th class="center" style="width: 100px;">Añadir docentes al periodo</th>
-                            <th class="center" style="width: 100px;">Editar horas de docentes añadidos</th>
+                            <th class="center" style="width: 60px;">Editar periodo</th>
+                            <th class="center" style="width: 70px;">Añadir docentes al periodo</th>
+                            <th class="center" style="width: 80px;">Editar horas de docentes añadidos</th>
                             <th>Periodo</th>
                             <th>Fecha inicio</th>
                             <th>Fecha fin</th>
@@ -194,7 +194,7 @@
     <br>
 </div>
 
-<div id="dialog">
+<div id="dialogUtesConfiguracion">
     <div>
         <div class="ad-banner-example">
             <ng-template ad-host></ng-template>
