--- a/src/app/Utes/utesconfiguracion/utesconfiguracionnewconvocatoria.component.html
+++ b/src/app/Utes/utesconfiguracion/utesconfiguracionnewconvocatoria.component.html
@@ -4,7 +4,7 @@
         <div class="col-sm-10">
             <div class="profile-info-name">Nombre de convocatoria: </div>
             <div class="profile-info-value" style="width: 80%;"><span>
-                <input type="text" class="form-control" name="nombre" [(ngModel)]="convocatoria.conNombre">
+                <input type="text" class="form-control" name="nombre" [(ngModel)]="convocatoria.conNombre" [attr.disabled]="convocatoria.idCon || !convocatoria.idCon ? '' : null">
             </span></div>
         </div>
     </div>
@@ -21,7 +21,7 @@
             <div class="profile-info-name">Periodo: </div>
             <div class="profile-info-value" style="width: 80%;"><span>
                 <select class="form-control" name="miselect" [(ngModel)]="convocatoria.conPeriodo">
-                    <!-- <option [value]="item.idTrsl" *ngFor="let item of listResolucionTipo">{{item.trslTitulo}}</option> -->
+                    <option [value]="item.idPrd" *ngFor="let item of listPeriodo">{{item.prdNumero}}</option>
                 </select>
             </span></div>
         </div>
@@ -50,13 +50,19 @@
             </span></div>
         </div>
     </div>
+    <input type="hidden" value="" name="conSecuencia" [(ngModel)]="convocatoria.conSecuencia">
     <input type="hidden" value="" name="id" [(ngModel)]="convocatoria.idCon">
     <br/>
     <div class="form-group row">
         <div class="col-sm-12 center">
-            <button class="btn btn-primary" role="button" (click)='updateTemaconvocatoriaEstudiante()'>
-                <i class="fa fa-save"></i> GUARDAR
+            <button class="btn btn-primary" role="button" (click)='createConvocatoria()' *ngIf="!convocatoria.idCon else elseBlock">
+                <i class="fa fa-save"></i> CREAR
             </button>
+            <ng-template #elseBlock>
+                <button class="btn btn-primary" role="button" (click)='update()'>
+                    <i class="fa fa-save"></i> EDITAR
+                </button>
+            </ng-template>
         </div>
     </div>
 </form>
